Create an entry point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,4 @@ add_executable(RegexEngine
         main.cpp
         Makefile
         NFA.cpp
-        NFA.h)
+        NFA.h Engine.cpp Engine.h)
