Add sample books

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,5 @@ set(CMAKE_CXX_STANDARD 11)
 include_directories(.)
 
 add_executable(RegexEngine Edge.cpp Edge.h InfixToPostfixConverter.cpp InfixToPostfixConverter.h NFA.cpp NFA.h Engine.cpp Engine.h main.cpp)
+
+file(COPY samples DESTINATION .)
